--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -30,6 +30,7 @@
         document.getElementById("add").style.display="none"
         document.getElementById("my").style.display="none"
         document.getElementById("logout").style.display="none"
+        document.getElementById("cart").style.display="none"
         document.getElementById("logout").addEventListener("click",()=>{
             location.reload()
         })
