--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
                 <form action="/user/login" method="post">
                     <input type="text" name="email" placeholder="Your Email Address" required><br>
                     <input type="text" name="password" placeholder="Enter Password" required><br>
-                    <a href="/user/mail" style="display: flex; margin-bottom: 15px; margin-left: 10px; font-size: 15px; font-weight: 600; color: #717fe0;"
+                    <a href="/user/email" style="display: flex; margin-bottom: 15px; margin-left: 10px; font-size: 15px; font-weight: 600; color: #717fe0;"
                     >Forget Password</a>
                     <button type="submit" class="user-btn">log in</button>
                 </form>
