--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,6 +211,24 @@ footer{
     overflow: hidden;
 }
 
+.outofstock{
+    position: absolute;
+    margin: auto;
+    font-size: 16px;
+    top: 50px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    height: 25px;
+    width: 100%;
+    margin-top: 100px;
+    text-align: center;
+    background-color: #ff7474ba;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    color: white;
+    font-weight: 500;
+}
+
 .firdiv button{
     position: absolute;
     height: 40px;
