--- a/views/femail.ejs
+++ b/views/femail.ejs
@@ -10,16 +10,16 @@
 <body>
     <%- include('nav')%>
     <section class="line-section">
-        <h2>OTP verification</h2>
+        <h2>Forget password</h2>
     </section>
-    <div class="box">
+    <div class="box" >
         <div class="in-box" style="height: 300px; display: flex;
         align-items: center;
         justify-content: center;">
-            <form action="/user/otp" method="post">
-                <h2 style="font-size: 15px; color: #888; font-weight: 400;">send otp to your ragister Email-address enter OTP hear</h2>
-                <input type="text" name="otpp" placeholder="Enter OTP" required><br>
-                <button type="submit" class="user-btn">Verify</button>
+            <form action="/user/email" method="post">
+                <h2 style="font-size: 15px; color: #888; font-weight: 400; padding-bottom: 30px;">Please enter the ragister email address your password reset information sent to</h2>
+                <input type="email" name="email" placeholder="Enter ragister email address" required><br>
+                <button type="submit" class="user-btn">sent OTP</button>
             </form>
         </div>
     </div>
