--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -24,6 +24,7 @@
 
 <script>
     const cookie = document.cookie;
+    console.log(cookie == "role=admin");
     if(!cookie){
         document.getElementById("signup").style.display="block"
         document.getElementById("login").style.display="block"
@@ -40,7 +41,7 @@
         document.getElementById("login").style.display="none"
         document.getElementById("logout").style.display="block"
 
-        const verify = cookie.split(";")[1];
+        const verify = document.cookie.split(";")[1];
         const verify2= verify.split("=")[1];
 
         if(verify2 == "user"){
